--- a/src/Components/WeatherApp/WeatherApp.css
+++ b/src/Components/WeatherApp/WeatherApp.css
@@ -27,7 +27,7 @@
     font-weight: 400;
 }
 
-
+/*
 .search-icon{
     display: flex;
     justify-content: center;
@@ -38,7 +38,7 @@
     border-radius: 78px;
     cursor: pointer;
 }
-
+*/
 .weather-image {
     margin-top: 29px;
     display: flex;
